--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,9 @@ body {
     width: 50%;
     text-align: center;
 }    
+img {
+    width: 300px ;
+    height: auto;
+    margin-right: 5px;
+    margin-top: 30px;
+  }
