--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,18 @@
 #main {
     text-align: center;
-    
-    color: rgb(163, 24, 24);
+    background-color: rgba(255, 255, 255, 0.7);
+    color: rgb(20, 139, 36);
     font-weight: bolder;
     padding: 20px;
-    font-size: 45px;
+    font-size: 3vw;
+    border: 5px solid #850404;
+    height: 100px;
+    width: 50%;
+    margin: auto;
 }
 
 body {
-    background-image: url("../images/worldMap.jpeg");
+    background-image: url("../images/map.jpg");
     background-size: cover;
     font-family: 'Karla', sans-serif;
 }     
