--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
     text-align: center;
 }    
 img {
-    width: 300px ;
+    max-width: 100% ;
     height: auto;
     margin-right: 5px;
     margin-top: 30px;
